--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hey</title>
+	<meta charset="utf-8">
+	<meta name="description" content="A single page application which contains information regarding the life of Ada Lovelace">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>Ada Lovelace Tribute</title>
 </head>
 <body>
-	car
+	<h1>car</h1>
+	<script type="text/javascript" src="js/app.js"></script>	
 </body>
 </html>
