--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<title>Ada Lovelace Tribute</title>
 </head>
 <body>
-	<h1>car</h1>
-	<script type="text/javascript" src="js/app.js"></script>	
+	<article id="article-content">
+	</article>
+	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
