--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 	<meta name="description" content="A single page application which contains information regarding the life of Ada Lovelace">
+	<link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Ada Lovelace Tribute</title>
 </head>
